--- a/content/coronalogy/01-prathamika-parichaya/002.md
+++ b/content/coronalogy/01-prathamika-parichaya/002.md
@@ -8,7 +8,7 @@ author: "ಟಿ. ಜಿ. ಶ್ರೀನಿಧಿ"
 draft: true
 topic: "ಕೊರೋನಾಲಜಿ"
 collection: "ಪ್ರಾಥಮಿಕ ಪರಿಚಯ"
-#image: "https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Screen_time.jpg/1920px-Screen_time.jpg"
+image: "/images/coronalogy.jpg"
 #imageCreditsText: "Image from Wikimedia Commons"
 #knowMoreLink: "https://en.wikipedia.org/wiki/Fear_of_missing_out"
 
