--- a/content/coronalogy/02-vydya-vignanada-aaee/003.md
+++ b/content/coronalogy/02-vydya-vignanada-aaee/003.md
@@ -1,23 +1,25 @@
 ---
 weight: 3
-title: "ರೋಗಗಳಿಗೆ ಹೆಸರಿಡುವವರು ಯಾರು?"
+title: "ಜ಼ೂನಾಟಿಕ್ ಕಾಯಿಲೆಗಳು"
 #titleEnglish: ""
-titleKannada: "ರೋಗಗಳಿಗೆ ಹೆಸರಿಡುವವರು ಯಾರು?"
+titleKannada: "ಜ಼ೂನಾಟಿಕ್ ಕಾಯಿಲೆಗಳು"
 date: 2020-09-04T13:34:02+05:30
 author: "ಟಿ. ಜಿ. ಶ್ರೀನಿಧಿ"
 draft: true
 topic: "ಕೊರೋನಾಲಜಿ"
-collection: "ಪ್ರಾಥಮಿಕ ಪರಿಚಯ"
+collection: "ವೈದ್ಯವಿಜ್ಞಾನದ ಅಆಇಈ"
 image: "/images/coronalogy.jpg"
 #imageCreditsText: "Image from Wikimedia Commons"
 #knowMoreLink: "https://en.wikipedia.org/wiki/Fear_of_missing_out"
 
 ---
 
-ಪ್ರತಿ ರೋಗಕ್ಕೂ ಒಂದೊಂದು ಹೆಸರಿರುವುದು ನಮಗೆ ಗೊತ್ತು. ಕೆಲವು ರೋಗಗಳಿಗೆ ಸ್ಥಳೀಯ ಹೆಸರುಗಳು ಇರಬಹುದಾದರೂ, ಬಹುತೇಕ ರೋಗಗಳನ್ನು ವಿಶ್ವದೆಲ್ಲೆಡೆ ಒಂದೇ ಹೆಸರಿನಿಂದ ಗುರುತಿಸಲಾಗುತ್ತದೆ. ಏಡ್ಸ್, ಸಾರ್ಸ್, ಮರ್ಸ್, ಎಬೋಲ, ಚಿಕುನ್‌ಗುನ್ಯಾ, ಡೆಂಗಿ ಮುಂತಾದವುಗಳಿಂದ ಈಗಿನ ಕೋವಿಡ್-೧೯ವರೆಗೆ ಇಂತಹ ಹಲವು ಹೆಸರುಗಳನ್ನು ನಾವು ಕೇಳಿದ್ದೇವೆ.
+ಪ್ರಾಣಿ-ಪಕ್ಷಿಗಳ ಜೊತೆಗಿನ ಮನುಷ್ಯರ ಸಂಬಂಧ ಸಂಕೀರ್ಣವಾದದ್ದು. ನಮ್ಮ ಒಡನಾಡಿಗಳಾಗಿರುವುದರಿಂದ ಪ್ರಾರಂಭಿಸಿ ನಮ್ಮ ಕೆಲಸಗಳನ್ನು ಸುಲಭಮಾಡುವವರೆಗೆ, ವೈಜ್ಞಾನಿಕ ಸಂಶೋಧನೆಗಳಲ್ಲಿ ನೆರವಾಗುವುದರಿಂದ ನಮಗೆ ಆಹಾರ ಒದಗಿಸುವವರೆಗೆ ಹಲವು ವಿಧಗಳಲ್ಲಿ ಅವು ನೆರವಾಗುತ್ತವೆ.
 
-ರೋಗ ಹರಡುವ ವಿಧಾನ, ಅದರ ತೀವ್ರತೆ, ಲಭ್ಯವಿರುವ ಚಿಕಿತ್ಸೆ ಹಾಗೂ ರೋಗವನ್ನು ತಡೆಗಟ್ಟುವ ವಿಧಾನಗಳ ಬಗ್ಗೆ ವಿಚಾರವಿನಿಮಯ ಸಾಧ್ಯವಾಗಿಸುವ ನಿಟ್ಟಿನಲ್ಲಿ ಮೊದಲ ಹೆಜ್ಜೆಯಾಗಿ ಅದಕ್ಕೊಂದು ಹೆಸರಿಡಲಾಗುತ್ತದೆ. ಯಾರೋ ಸುಮ್ಮನೆ ಹೆಸರಿಟ್ಟುಬಿಟ್ಟರೆ ಅದಕ್ಕೆ ಜಾಗತಿಕ ಮನ್ನಣೆ ಸಿಗುವುದು ಹೇಗೆ? ಅದಕ್ಕಾಗಿಯೇ ಈ ಜವಾಬ್ದಾರಿಯನ್ನು ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆಗೆ ನೀಡಲಾಗಿದೆ. 
+ಇಷ್ಟೆಲ್ಲ ವ್ಯಾಪಕವಾದ ಸಂಪರ್ಕದಿಂದಾಗಿ ಕೆಲವೊಮ್ಮೆ ಅಪಾಯಕಾರಿ ರೋಗಗಳೂ ಪ್ರಾಣಿ-ಪಕ್ಷಿಗಳಿಂದ ಮನುಷ್ಯರಿಗೆ ಹರಡಬಹುದು. ಅವುಗಳಲ್ಲಿರುವ ರೋಗಕಾರಕ ಬ್ಯಾಕ್ಟೀರಿಯಾ, ಫಂಗಸ್, ವೈರಸ್ ಅಥವಾ ಇನ್ನಿತರ ಪರಾವಲಂಬಿಗಳು ಮನುಷ್ಯರ ದೇಹ ಸೇರಿದಾಗ ಇಂತಹ ರೋಗಗಳು ಕಾಣಿಸಿಕೊಳ್ಳುತ್ತವೆ. ಈ ಬಗೆಯಲ್ಲಿ ಹರಡುವ ಯಾವುದೇ ರೋಗವನ್ನು 'ಜ಼ೂನಾಟಿಕ್ ಕಾಯಿಲೆ' ಅಥವಾ 'ಜ಼ೂನೋಸಿಸ್' ಎಂದು ಕರೆಯುತ್ತಾರೆ. ಮನುಷ್ಯರನ್ನು ಬಾಧಿಸುವ ಬಹುಪಾಲು ಕಾಯಿಲೆಗಳು ಇದೇ ಗುಂಪಿಗೆ ಸೇರಿದವು.    
 
-ಮನುಷ್ಯರನ್ನು ಕಾಡುವ ಸಾಂಕ್ರಾಮಿಕ ರೋಗಗಳಿಗೆ ಹೆಸರಿಡಲು ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆ (WHO), ವಿಶ್ವ ಪ್ರಾಣಿ ಆರೋಗ್ಯ ಸಂಸ್ಥೆ (OIE) ಹಾಗೂ ಆಹಾರ ಮತ್ತು ಕೃಷಿ ಸಂಸ್ಥೆಗಳ (FAO) ಸಹಯೋಗದಲ್ಲಿ ಮಾರ್ಗಸೂಚಿಯನ್ನು ರೂಪಿಸಿದೆ. ಅದಕ್ಕೆ ಅನುಗುಣವಾಗಿ ಯಾವುದೇ ಹೊಸ ರೋಗಕ್ಕೆ ನೀಡಲಾಗುವ ಹೆಸರನ್ನು ಅಂತಾರಾಷ್ಟ್ರೀಯ ರೋಗಗಳ ವರ್ಗೀಕರಣ (ಇಂಟರ್‌ನ್ಯಾಶನಲ್ ಕ್ಲಾಸಿಫಿಕೇಶನ್ ಆಫ್ ಡಿಸೀಸಸ್, ICD) ಎಂಬ ಸಂಗ್ರಹಕ್ಕೆ ಸೇರಿಸಲಾಗುತ್ತದೆ. 
+ಊರಿನ ಅಥವಾ ಕಾಡಿನ ಪ್ರಾಣಿ-ಪಕ್ಷಿಗಳ ಪ್ರತ್ಯಕ್ಷ ಅಥವಾ ಪರೋಕ್ಷ ಸಂಪರ್ಕದಿಂದ ಜ಼ೂನಾಟಿಕ್ ಕಾಯಿಲೆಗಳು ಮನುಷ್ಯರನ್ನು ಬಾಧಿಸಬಹುದು. ಪ್ರಾಣಿ-ಪಕ್ಷಿಗಳನ್ನು ಮುಟ್ಟಿದಾಗ, ಅವುಗಳ ಕಡಿತದಿಂದ, ಅವುಗಳ ತ್ಯಾಜ್ಯದಿಂದ ಮಲಿನವಾದ ನೀರು ಅಥವಾ ಸರಿಯಾಗಿ ಸಂಸ್ಕರಿಸದ ಪ್ರಾಣಿಜನ್ಯ ಆಹಾರದ ಸೇವನೆಯಿಂದ ಅವುಗಳಲ್ಲಿರುವ ರೋಗಕಾರಕಗಳು ಮನುಷ್ಯರಿಗೂ ಹರಡುವುದು ಸಾಧ್ಯ. ಇಂತಹ ಯಾವುದೇ ಸಂಪರ್ಕವು, ರೋಗಕಾರಕವನ್ನು ಮನುಷ್ಯರಿಗೆ ಹರಡುವ ಸೇತುವೆಯಂತೆ ಕೆಲಸ ಮಾಡುತ್ತದೆ. 
 
-ರೋಗಗಳನ್ನು ಪ್ರತ್ಯೇಕವಾಗಿ ಗುರುತಿಸಿದಂತೆ ರೋಗಕಾರಕಗಳನ್ನೂ ಪ್ರತ್ಯೇಕವಾಗಿ ಗುರುತಿಸಬೇಕಾಗುತ್ತದಲ್ಲ, ಅದಕ್ಕೂ ಜಾಗತಿಕ ಮಟ್ಟದ ವ್ಯವಸ್ಥೆ ಇದೆ. ಈ ಪೈಕಿ ವೈರಸ್‌ಗಳಿಗೆ ಹೆಸರಿಡುವ ಜವಾಬ್ದಾರಿ 'ವೈರಸ್‌ಗಳ ಜೀವಿವರ್ಗೀಕರಣ ವಿಜ್ಞಾನ ಕುರಿತ ಅಂತಾರಾಷ್ಟ್ರೀಯ ಸಮಿತಿ'ಯದು (ಇಂಟರ್‌ನ್ಯಾಶನಲ್ ಕಮಿಟಿ ಆನ್ ಟ್ಯಾಕ್ಸಾನಮಿ ಆಫ್ ವೈರಸಸ್, ICTV). ಕೋವಿಡ್-೧೯ ರೋಗವನ್ನು ಉಂಟುಮಾಡುವ ವೈರಸ್‌ಗೆ ಅದು ನೀಡಿರುವ ಅಧಿಕೃತ ಹೆಸರು 'severe acute respiratory syndrome coronavirus 2 (SARSCoV2)'.
+ಪ್ರಾಣಿ-ಪಕ್ಷಿಗಳ ಸಂಪರ್ಕಕ್ಕೆ ಬಂದಾಗ ತಕ್ಷಣ ಕೈತೊಳೆದುಕೊಳ್ಳುವುದರಿಂದ ಪ್ರಾರಂಭಿಸಿ ವನ್ಯಜೀವಿಗಳ ಮಾರಾಟವನ್ನು ಸಂಪೂರ್ಣವಾಗಿ ನಿಷೇಧಿಸುವವರೆಗೆ ಹಲವು ಕ್ರಮಗಳು ಇಂತಹ ಕಾಯಿಲೆಗಳಿಂದ ನಮ್ಮನ್ನು ಕಾಪಾಡಬಲ್ಲವು.
+
+ಪ್ಲೇಗ್, ರೇಬಿಸ್, ಹಕ್ಕಿಜ್ವರ, ಹಂದಿಜ್ವರ ಇವೆಲ್ಲ ಜ಼ೂನಾಟಿಕ್ ಕಾಯಿಲೆಯ ಉದಾಹರಣೆಗಳು. ಕೊರೊನಾವೈರಸ್‌ನಿಂದ ಉಂಟಾಗುವ ಸಾರ್ಸ್, ಮರ್ಸ್‌ಗಳೂ ಇಂತಹವೇ. ಕೋವಿಡ್-೧೯ ಕೂಡ ಜ಼ೂನಾಟಿಕ್ ಕಾಯಿಲೆಯೇ ಎನ್ನಲಾಗಿದ್ದು, ಈ ರೋಗದ ಮೂಲ ಯಾವ ಜೀವಿ ಎನ್ನುವುದರ ಬಗ್ಗೆ ಸಂಶೋಧನೆ ನಡೆದಿದೆಯೆಂದು ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆ ಹೇಳಿದೆ.
