Add vydya vignanada aaee content

--- a/content/coronalogy/02-vydya-vignanada-aaee/004.md
+++ b/content/coronalogy/02-vydya-vignanada-aaee/004.md
@@ -1,23 +1,23 @@
 ---
 weight: 4
-title: "ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆಯ ಪಾತ್ರವೇನು?"
+title: "ಇನ್‌ಕ್ಯುಬೇಶನ್ ಪೀರಿಯಡ್"
 #titleEnglish: ""
-titleKannada: "ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆಯ ಪಾತ್ರವೇನು?"
+titleKannada: "ಇನ್‌ಕ್ಯುಬೇಶನ್ ಪೀರಿಯಡ್"
 date: 2020-09-04T13:34:02+05:30
 author: "ಟಿ. ಜಿ. ಶ್ರೀನಿಧಿ"
 draft: true
 topic: "ಕೊರೋನಾಲಜಿ"
-collection: "ಪ್ರಾಥಮಿಕ ಪರಿಚಯ"
+collection: "ವೈದ್ಯವಿಜ್ಞಾನದ ಅಆಇಈ"
 image: "/images/coronalogy.jpg"
 #imageCreditsText: "Image from Wikimedia Commons"
 #knowMoreLink: "https://en.wikipedia.org/wiki/Fear_of_missing_out"
 
 ---
 
-ವಿಶ್ವಸಂಸ್ಥೆಯ ಹೆಸರು ನಮ್ಮೆಲ್ಲರಿಗೂ ಗೊತ್ತು. ಅಂತಾರಾಷ್ಟ್ರೀಯ ಶಾಂತಿ-ಸುರಕ್ಷತೆಗಳನ್ನು ಕಾಪಾಡುವ, ರಾಷ್ಟ್ರಗಳ ನಡುವೆ ಸ್ನೇಹ ಸಂಬಂಧ ಸಾಧಿಸುವ, ಅಂತಾರಾಷ್ಟ್ರೀಯ ಸಹಕಾರವನ್ನು ಬೆಳೆಸುವ ಮತ್ತು ವಿವಿಧ ರಾಷ್ಟ್ರಗಳ ಚಟುವಟಿಕೆಗಳ ನಡುವೆ ಸಮನ್ವಯ ಸಾಧ್ಯವಾಗಿಸುವ ಉದ್ದೇಶದಿಂದ ಈ ಅಂತರ್‌ಸರಕಾರಿ ಸಂಸ್ಥೆಯನ್ನು ೧೯೪೫ರಲ್ಲಿ ಸ್ಥಾಪಿಸಲಾಯಿತು. 
+ಮೊಟ್ಟೆಗೆ ಕಾವು ಕೊಟ್ಟು ಮರಿ ಮಾಡುವ ಪ್ರಕ್ರಿಯೆಗೆ ಇನ್‌ಕ್ಯುಬೇಶನ್ ಎಂಬ ಹೆಸರಿದೆ. ಈ ಪ್ರಕ್ರಿಯೆಗೆ ಬೇಕಾಗುವ ಅವಧಿಯೇ ಇನ್‌ಕ್ಯುಬೇಶನ್ ಪೀರಿಯಡ್. ಹೊಸ ಅಭಿಪ್ರಾಯ-ಆಲೋಚನೆಗಳ ಮನನಕಾಲವನ್ನೂ ಇದೇ ಹೆಸರಿನಿಂದ ಗುರುತಿಸುತ್ತಾರೆ. ಪ್ರಾರಂಭಿಕ ಹಂತದಲ್ಲಿ ಅಗತ್ಯವಿರುವ ನೆರವು ನೀಡುವ ಮೂಲಕ ನವೋದ್ಯಮಗಳನ್ನು ಬೆಳೆಸುವುದಕ್ಕೂ ಇನ್‌ಕ್ಯುಬೇಶನ್ ಎಂದೇ ಹೆಸರು. 
 
-ಆರೋಗ್ಯ, ಪೋಷಣೆ ಮತ್ತು ನೈರ್ಮಲ್ಯ - ಇವು ವಿಶ್ವದ ಎಲ್ಲ ರಾಷ್ಟ್ರಗಳ ಪಾಲಿಗೂ ಮಹತ್ವದ ವಿಷಯವೇ. ಈ ವಿಷಯಗಳ ಕುರಿತು ಅಂತಾರಾಷ್ಟ್ರೀಯ ಮಟ್ಟದಲ್ಲಿ ಕೆಲಸ ಮಾಡುವ ಉದ್ದೇಶದಿಂದ, ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆ (ವರ್ಲ್ಡ್ ಹೆಲ್ತ್ ಆರ್ಗನೈಸೇಶನ್) ೧೯೪೮ರಲ್ಲಿ ವಿಶ್ವಸಂಸ್ಥೆಯ ಅಂಗಸಂಸ್ಥೆಗಳಲ್ಲೊಂದಾಗಿ ಕಾರ್ಯಾರಂಭ ಮಾಡಿತು. ಈ ಸಂಸ್ಥೆ ಪ್ರಾರಂಭವಾದ ಏಪ್ರಿಲ್ ೭ನೇ ದಿನಾಂಕವನ್ನೇ ಇದೀಗ ವಿಶ್ವ ಆರೋಗ್ಯ ದಿನವನ್ನಾಗಿ ಆಚರಿಸಲಾಗುತ್ತದೆ.   
+ಸಾಂಕ್ರಾಮಿಕ ರೋಗಗಳ ವಿಷಯದಲ್ಲೂ ಈ ಹೆಸರಿನ ಬಳಕೆ ಇದೆ. ನಿರ್ದಿಷ್ಟ ರೋಗದ ಸೋಂಕು ವ್ಯಕ್ತಿಯೊಬ್ಬರಿಗೆ ತಾಗಿದಂದಿನಿಂದ ಅವರಲ್ಲಿ ರೋಗಲಕ್ಷಣಗಳು ಪ್ರಕಟವಾಗುವವರೆಗಿನ ಕಾಲಾವಧಿಯನ್ನು ಇನ್‌ಕ್ಯುಬೇಶನ್ ಪೀರಿಯಡ್ (ಪರಿಪಾಕ ಅವಧಿ) ಎಂದು ಕರೆಯುತ್ತಾರೆ. ಯಾವುದೇ ರೋಗಕಾರಕವು ರೋಗಿಯ ದೇಹದಲ್ಲಿ ರೋಗಲಕ್ಷಣಗಳನ್ನು ಉಂಟುಮಾಡುವ ಮಟ್ಟಕ್ಕೆ ಬೆಳೆಯಲು ಬೇಕಾದ ಅವಧಿ ಇದು. 
 
-ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆಯ ಕೇಂದ್ರಕಚೇರಿ ಇರುವುದು ಸ್ವಿಟ್ಸರ್ಲೆಂಡಿನ ಜಿನೀವಾದಲ್ಲಿ. ಇದಲ್ಲದೆ ವಿಶ್ವದಾದ್ಯಂತ ಈ ಸಂಸ್ಥೆಯ ೧೫೦ಕ್ಕೂ ಹೆಚ್ಚು ಕಚೇರಿಗಳಿವೆ. ವಿಶ್ವಸಂಸ್ಥೆ ಸದಸ್ಯರಾಷ್ಟ್ರಗಳ ಸರಕಾರಗಳಷ್ಟೇ ಅಲ್ಲದೆ ಹಲವು ಖಾಸಗಿ ಸಂಸ್ಥೆಗಳೂ ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆಯ ಕೆಲಸಗಳಲ್ಲಿ ಕೈಜೋಡಿಸುತ್ತವೆ. "ಎಲ್ಲೆಡೆ, ಎಲ್ಲರಿಗೂ ಉತ್ತಮ ಆರೋಗ್ಯವನ್ನು ಸಾಧಿಸುವ ಬದ್ಧತೆ" ನಮ್ಮನ್ನೆಲ್ಲ ಒಂದುಗೂಡಿಸುತ್ತದೆಂದು ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆ ತನ್ನ ಜಾಲತಾಣದಲ್ಲಿ ಹೇಳಿಕೊಂಡಿದೆ. ಸದಸ್ಯರಾಷ್ಟ್ರಗಳು ಹಾಗೂ ಖಾಸಗಿ ದಾನಿಗಳು ನೀಡುವ ದೇಣಿಗೆಯನ್ನು ಬಳಸಿ ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆ ತನ್ನ ಖರ್ಚುಗಳನ್ನು ನಿಭಾಯಿಸುತ್ತದೆ. 
+ಬೇರೆಬೇರೆ ರೋಗಗಳ ಇನ್‌ಕ್ಯುಬೇಶನ್ ಪೀರಿಯಡ್ ಬೇರೆಬೇರೆ ಇರಬಹುದು. ಒಂದೇ ರೋಗದ ಇನ್‌ಕ್ಯುಬೇಶನ್ ಪೀರಿಯಡ್ ಬೇರೆಬೇರೆ ವ್ಯಕ್ತಿಗಳಲ್ಲಿ ಬೇರೆಬೇರೆಯಾಗಿರುವುದೂ ಸಾಧ್ಯ. ಈ ಕಾರಣದಿಂದಲೇ ರೋಗವೊಂದರ ಇನ್‌ಕ್ಯುಬೇಶನ್ ಪೀರಿಯಡ್ ಅನ್ನು  ನಿರ್ದಿಷ್ಟ ಸಂಖ್ಯೆಯ ಬದಲು ಇಷ್ಟರಿಂದ ಇಷ್ಟು ದಿನಗಳೆಂಬ ಶ್ರೇಣಿಯ (ರೇಂಜ್) ರೂಪದಲ್ಲಿ ನೀಡಲಾಗುತ್ತದೆ. ಈ ಅವಧಿಯಲ್ಲಿ ರೋಗಿಯು ಸೋಂಕನ್ನು ಇತರರಿಗೆ ಹರಡಿಸುತ್ತಾನೋ ಇಲ್ಲವೋ ಎನ್ನುವುದು ಕೂಡ ಆಯಾ ರೋಗದ ಸ್ವರೂಪವನ್ನು ಅವಲಂಬಿಸಿರುತ್ತದೆ.
 
-ಕೋವಿಡ್-೧೯ ಜಾಗತಿಕ ಸೋಂಕಿನ ಸಂದರ್ಭದಲ್ಲಿ ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆಯು ತನ್ನ ಸದಸ್ಯ ರಾಷ್ಟ್ರಗಳಿಗೆ, ಅವುಗಳ ನಾಗರಿಕರಿಗೆ ಅಗತ್ಯ ಮಾರ್ಗದರ್ಶನ ನೀಡುವ ಕೆಲಸ ಮಾಡುತ್ತಿದೆ. ಈ ಪರಿಸ್ಥಿತಿಯನ್ನು ಸರಿಯಾಗಿ ನಿಭಾಯಿಸಿಲ್ಲವೆಂಬ ಆರೋಪವೂ ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆಯ ವಿರುದ್ಧ ಕೇಳಿಬಂದಿದೆ.
+ಕೋವಿಡ್-೧೯ ಉಂಟುಮಾಡುವ ಕೊರೊನಾವೈರಸ್ಸಿನ ಸಂಪರ್ಕಕ್ಕೆ ಬಂದ ನಂತರ ಆ ವ್ಯಕ್ತಿಯಲ್ಲಿ ರೋಗಲಕ್ಷಣಗಳು ಕಾಣಿಸಿಕೊಳ್ಳಲು ಒಂದರಿಂದ ಹದಿನಾಲ್ಕು ದಿನ ಬೇಕಾಗಬಹುದು (ಸರಾಸರಿ ೫-೬ ದಿನ) ಎಂದು ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆ ಹೇಳಿದೆ. ಕೋವಿಡ್-೧೯ ಸೋಂಕು ತಗುಲಿದ್ದರೂ ಕೆಮ್ಮು-ಸೀನು ಮುಂತಾದ ರೋಗಲಕ್ಷಣಗಳು ಕಾಣಿಸಿಕೊಂಡಿಲ್ಲದ ರೋಗಿಗಳಿಂದ ಇತರರಿಗೆ ಸೋಂಕು ಹರಡುವ ಸಾಧ್ಯತೆ ತೀರಾ ಕಡಿಮೆ ಎನ್ನುವುದು ತಜ್ಞರ ಅಭಿಪ್ರಾಯ.
