--- a/content/coronalogy/02-vydya-vignanada-aaee/005.md
+++ b/content/coronalogy/02-vydya-vignanada-aaee/005.md
@@ -1,23 +1,25 @@
 ---
 weight: 5
-title: "ಯಾರಿದು ಪೇಶೆಂಟ್ ಜ಼ೀರೋ?"
+title: "ಕೋಮಾರ್ಬಿಡಿಟಿ ಅಂದರೇನು?"
 #titleEnglish: ""
-titleKannada: "ಯಾರಿದು ಪೇಶೆಂಟ್ ಜ಼ೀರೋ?"
+titleKannada: "ಕೋಮಾರ್ಬಿಡಿಟಿ ಅಂದರೇನು?"
 date: 2020-09-04T13:34:02+05:30
 author: "ಟಿ. ಜಿ. ಶ್ರೀನಿಧಿ"
 draft: true
 topic: "ಕೊರೋನಾಲಜಿ"
-collection: "ಪ್ರಾಥಮಿಕ ಪರಿಚಯ"
+collection: "ವೈದ್ಯವಿಜ್ಞಾನದ ಅಆಇಈ"
 image: "/images/coronalogy.jpg"
 #imageCreditsText: "Image from Wikimedia Commons"
 #knowMoreLink: "https://en.wikipedia.org/wiki/Fear_of_missing_out"
 
 ---
 
-ಯಾವುದೇ ರೋಗ ಎಷ್ಟು ವ್ಯಾಪಕವಾಗಿ ಹರಡಿದೆಯೆನ್ನುವುದರ ಬಗ್ಗೆ ಸರಕಾರಗಳು ಸತತ ನಿಗಾ ವಹಿಸಿದ ಹಾಗೆ, ಮೊತ್ತಮೊದಲಿಗೆ ಆ ರೋಗದ ಸೋಂಕು ಎಲ್ಲಿ ಯಾರಿಗೆ ತಗುಲಿತು ಎನ್ನುವುದನ್ನು ತಿಳಿಯಲು ವೈದ್ಯವಿಜ್ಞಾನಿಗಳು ಉತ್ಸುಕರಾಗಿರುತ್ತಾರೆ. ಆ ವಿಷಯ ತಿಳಿದರೆ ರೋಗದ ಮೂಲದ ಬಗ್ಗೆ ಮಹತ್ವದ ವಿವರಗಳು ಗೊತ್ತಾಗುತ್ತವೆ, ಹಾಗೂ ಆ ರೋಗ ಇನ್ನಷ್ಟು ಹರಡದಂತೆ ತಡೆಯಲು ಆ ಮಾಹಿತಿಯನ್ನು ಬಳಸಿಕೊಳ್ಳಬಹುದು ಎನ್ನುವುದು ಈ ಉತ್ಸುಕತೆಯ ಹಿಂದಿನ ಆಲೋಚನೆ.
+ಕೋವಿಡ್-೧೯ರಿಂದಾಗಿ ನಿಧನರಾದ ಹಲವು ವ್ಯಕ್ತಿಗಳು ಅದರ ಹೊರತಾಗಿ ಬೇರೆ ಕಾಯಿಲೆಗಳಿಂದಲೂ ಬಳಲುತ್ತಿದ್ದರು ಎಂದು ಸುದ್ದಿಸಂಸ್ಥೆಗಳು ವರದಿಮಾಡಿರುವುದನ್ನು ನೀವು ನೋಡಿರಬಹುದು. ಹೀಗೆ ಯಾವುದೇ ವ್ಯಕ್ತಿಯನ್ನು ಒಂದಕ್ಕಿಂತ ಹೆಚ್ಚು ಸಂಖ್ಯೆಯ ಆರೋಗ್ಯ ಸಂಬಂಧಿ ಸಮಸ್ಯೆಗಳು ಏಕಕಾಲದಲ್ಲೇ ಬಾಧಿಸುವುದಕ್ಕೆ ವೈದ್ಯಕೀಯ ಪರಿಭಾಷೆಯಲ್ಲಿ comorbidity ಎಂದು ಹೆಸರು.
 
-ಹೀಗೆ, ಯಾವುದೇ ರೋಗದಿಂದ ಮೊತ್ತಮೊದಲು ಸೋಂಕಿತನಾದ ವ್ಯಕ್ತಿಯನ್ನು 'ಪೇಶೆಂಟ್ ಜ಼ೀರೋ' ಎಂದು ಗುರುತಿಸಲಾಗುತ್ತದೆ. ಹೀಗೆ ನಿರ್ದಿಷ್ಟ ವ್ಯಕ್ತಿಯೊಬ್ಬನನ್ನು ಗುರುತಿಸುವುದು ಆತನ ಬಗೆಗಿನ ಜನಾಕ್ರೋಶಕ್ಕೆ ಕಾರಣವಾಗುವ ಅಪಾಯವಿರುವುದರಿಂದ ಈ ಹೆಸರಿನ ಬದಲು 'ಇಂಡೆಕ್ಸ್ ಕೇಸ್' ಎಂಬ ಉಲ್ಲೇಖವನ್ನು (ನಿರ್ದಿಷ್ಟ ರೋಗದ ಮೊದಲ ದಾಖಲಿತ ಪ್ರಕರಣ ಎಂಬ ಅರ್ಥದಲ್ಲಿ) ಬಳಸುವ ಅಭ್ಯಾಸವೂ ಇದೆ. ಯಾವುದೇ ರೋಗ ಮೊದಲಿಗೆ ಬಾಧಿಸಿದ್ದು ಇಂತಹವರನ್ನೇ ಎಂದು ನಿಖರವಾಗಿ ಗುರುತಿಸುವುದು ಕಷ್ಟದ ಕೆಲಸವಾದ್ದರಿಂದ ಮೊದಲ ದಾಖಲಿತ ಪ್ರಕರಣ ಎನ್ನುವುದೇ ಹೆಚ್ಚು ಸೂಕ್ತವೆಂದು ತಜ್ಞರೂ ಅಭಿಪ್ರಾಯಪಡುತ್ತಾರೆ.
+ನಿಘಂಟಿನಲ್ಲಿ morbid ಎಂಬ ಪದಕ್ಕೆ 'ರೋಗಸೂಚಕ ಲಕ್ಷಣಗಳಿರುವ' ಎಂಬ ಅರ್ಥ ದೊರಕುತ್ತದೆ. ಹೀಗಿರುವ ಪರಿಸ್ಥಿತಿ morbidity - ರೋಗಗ್ರಸ್ತತೆ ಅಥವಾ ಅಸ್ವಸ್ಥತೆ. ಒಬ್ಬ ವ್ಯಕ್ತಿ ಏಕಕಾಲದಲ್ಲಿ ಒಂದಕ್ಕಿಂತ ಹೆಚ್ಚು ರೋಗಗಳಿಂದ ಅಸ್ವಸ್ಥನಾಗಿದ್ದರೆ ಅದೇ comorbidity. ಉದಾಹರಣೆಗೆ, ಒಬ್ಬ ವ್ಯಕ್ತಿಯಲ್ಲಿ ಅಧಿಕ ರಕ್ತದೊತ್ತಡ ಹಾಗೂ ಡಯಾಬಿಟಿಸ್ ಎರಡೂ ಇದ್ದರೆ ಅದು comorbidityಯ ಉದಾಹರಣೆ. ಈ ಪದವನ್ನು ಅಮೆರಿಕಾದ ವೈದ್ಯ ಆಲ್ವನ್ ರಿಚರ್ಡ್ ಫೈನ್‌ಸ್ಟೈನ್ ೧೯೭೦ರಲ್ಲಿ ಮೊದಲ ಬಾರಿಗೆ ಪರಿಚಯಿಸಿದರು ಎನ್ನಲಾಗಿದೆ. 
 
-ಹೆಸರು ಏನೇ ಇದ್ದರೂ ರೋಗದ ಮೂಲವನ್ನು ಗುರುತಿಸುವುದು ಸಾಧ್ಯವಾದರೆ ಅದು ರೋಗವನ್ನು ಇನ್ನಷ್ಟು ಹರಡದಂತೆ ತಡೆಯಲು ಸಹಾಯ ಮಾಡುತ್ತದೆ ಎನ್ನುವುದಂತೂ ನಿಜ. ವ್ಯಕ್ತಿಯಿಂದ ವ್ಯಕ್ತಿಗೆ ಹರಡುವ ಕೋವಿಡ್-೧೯ರಂತಹ ಸಾಂಕ್ರಾಮಿಕ ರೋಗಗಳ ಸಂದರ್ಭದಲ್ಲಿ, ರೋಗಿಗಳ ಸಂಪರ್ಕಕ್ಕೆ ಬಂದವರನ್ನು ಗುರುತಿಸುವ 'ಕಾಂಟ್ಯಾಕ್ಟ್ ಟ್ರೇಸಿಂಗ್' ಪ್ರಕ್ರಿಯೆಯು ರೋಗದ ಮೂಲವನ್ನು ತಿಳಿಯಲು ನೆರವಾಗಬಲ್ಲದು. ಜಾಗತಿಕ ಸೋಂಕಿನ (ಪ್ಯಾನ್‌ಡೆಮಿಕ್) ಸಂದರ್ಭದಲ್ಲಿ ನಿರ್ದಿಷ್ಟ ಪ್ರದೇಶ ಅಥವಾ ದೇಶದ ಮೊದಲ ರೋಗಿ ಯಾರು ಎಂದು ತಿಳಿದುಕೊಳ್ಳುವುದೂ ರೋಗದ ನಿಯಂತ್ರಣದಲ್ಲಿ ಸಹಕಾರಿಯಾಗುವುದು ಸಾಧ್ಯ.
+ಈಗಾಗಲೇ ಅನಾರೋಗ್ಯಪೀಡಿತರಾಗಿರುವ ವ್ಯಕ್ತಿಗಳಲ್ಲಿ ರೋಗರಕ್ಷೆ ದುರ್ಬಲವಾಗಿರುವುದು ಸಾಧ್ಯ. ಮೊದಲೇ ಇದ್ದ ರೋಗದ ಜೊತೆಗೆ ಇನ್ನೊಂದು ರೋಗವೂ ಸೇರಿಕೊಂಡಾಗ ಅವು ಒಂದನ್ನೊಂದು ಪ್ರಭಾವಿಸುತ್ತಾ ಎರಡರ ಪರಿಣಾಮಗಳನ್ನೂ ತೀವ್ರಗೊಳಿಸಬಹುದು.
 
-ಕೋವಿಡ್-೧೯ ಜಾಗತಿಕ ಸೋಂಕಿನ ಸಂದರ್ಭದಲ್ಲಿ ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆಯು ತನ್ನ ಸದಸ್ಯ ರಾಷ್ಟ್ರಗಳಿಗೆ, ಅವುಗಳ ನಾಗರಿಕರಿಗೆ ಅಗತ್ಯ ಮಾರ್ಗದರ್ಶನ ನೀಡುವ ಕೆಲಸ ಮಾಡುತ್ತಿದೆ. ಈ ಪರಿಸ್ಥಿತಿಯನ್ನು ಸರಿಯಾಗಿ ನಿಭಾಯಿಸಿಲ್ಲವೆಂಬ ಆರೋಪವೂ ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆಯ ವಿರುದ್ಧ ಕೇಳಿಬಂದಿದೆ.
+ಇತರ ಸಾಂಕ್ರಾಮಿಕ ಕಾಯಿಲೆಗಳಂತೆ ಕೋವಿಡ್-೧೯ಕ್ಕೂ ಇದು ಅನ್ವಯವಾಗುವುದರಿಂದ, ಅದು ಕೂಡ ಇಂತಹ ವ್ಯಕ್ತಿಗಳಿಗೆ ಹೆಚ್ಚಿನ ಅಪಾಯ ಉಂಟುಮಾಡುವ ಸಾಧ್ಯತೆ ಇರುತ್ತದೆ. ಹೀಗಾಗಿ ಈ ಮೊದಲೇ ಅನಾರೋಗ್ಯಪೀಡಿತರಾಗಿರುವ ವ್ಯಕ್ತಿಗಳು ಕೋವಿಡ್-೧೯ ವಿಷಯದಲ್ಲಿ ಉಳಿದವರಿಗಿಂತ ಹೆಚ್ಚಿನ ಎಚ್ಚರಿಕೆ ವಹಿಸಬೇಕಾದ್ದು ಅನಿವಾರ್ಯ ಎಂದು ವೈದ್ಯರು ಹೇಳುತ್ತಾರೆ. 
+
+ಇಂತಹ ವ್ಯಕ್ತಿಗಳಿಗೆ ಚಿಕಿತ್ಸೆ ನೀಡುವಾಗ ಅವರನ್ನು ಬಾಧಿಸುತ್ತಿರುವ ಎಲ್ಲ ರೋಗಗಳನ್ನೂ ಗಮನದಲ್ಲಿಟ್ಟುಕೊಳ್ಳಬೇಕಾದ್ದರಿಂದ ಆ ಪ್ರಕ್ರಿಯೆ ಹೆಚ್ಚು ಸಂಕೀರ್ಣವಾಗಿರಬಹುದು. ಈ ರೀತಿಯ ರೋಗಿಗಳ ಚಿಕಿತ್ಸೆ ವೈದ್ಯರಿಗೆ ಅನೇಕ ಸವಾಲುಗಳನ್ನು ಒಡ್ಡುತ್ತದೆ.
