--- a/content/coronalogy/02-vydya-vignanada-aaee/006.md
+++ b/content/coronalogy/02-vydya-vignanada-aaee/006.md
@@ -1,25 +1,27 @@
 ---
 weight: 6
-title: "ಸೂಪರ್ ಸ್ಪ್ರೆಡರ್ ಅಂದರೆ ಯಾರು?"
+title: "ಇಮ್ಯುನೋಕಾಂಪ್ರಮೈಸ್ಡ್ ಅಂದರೇನು?"
 #titleEnglish: ""
-titleKannada: "ಸೂಪರ್ ಸ್ಪ್ರೆಡರ್ ಅಂದರೆ ಯಾರು?"
+titleKannada: "ಇಮ್ಯುನೋಕಾಂಪ್ರಮೈಸ್ಡ್ ಅಂದರೇನು?"
 date: 2020-09-04T13:34:02+05:30
 author: "ಟಿ. ಜಿ. ಶ್ರೀನಿಧಿ"
 draft: true
 topic: "ಕೊರೋನಾಲಜಿ"
-collection: "ಪ್ರಾಥಮಿಕ ಪರಿಚಯ"
+collection: "ವೈದ್ಯವಿಜ್ಞಾನದ ಅಆಇಈ"
 image: "/images/coronalogy.jpg"
 #imageCreditsText: "Image from Wikimedia Commons"
 #knowMoreLink: "https://en.wikipedia.org/wiki/Fear_of_missing_out"
 
 ---
 
-ವ್ಯಕ್ತಿಯಿಂದ ವ್ಯಕ್ತಿಗೆ ಹರಡುವ ಸಾಂಕ್ರಾಮಿಕ ರೋಗಗಳ ನಿಯಂತ್ರಣ ಸವಾಲಿನ ಕೆಲಸ. ಸೋಂಕುಪೀಡಿತ ವ್ಯಕ್ತಿಯಿಂದ ಆ ಸೋಂಕು ಬೇರೆಯವರಿಗೆ ಹರಡುವ ಸಾಧ್ಯತೆ ಜಾಸ್ತಿ ಇದ್ದರಂತೂ ಪರಿಸ್ಥಿತಿಯನ್ನು ನಿಭಾಯಿಸುವುದು ಇನ್ನಷ್ಟು ಕಷ್ಟವಾಗುತ್ತದೆ.
+ರೋಗಕಾರಕಗಳನ್ನು ವಿರೋಧಿಸಲು, ಅವುಗಳಿಂದ ಸೋಂಕು ತಟ್ಟದಿರುವಂತೆ ತಡೆಯಲು ಪ್ರಕೃತಿಯು ನಮ್ಮ ದೇಹದಲ್ಲಿ ಪ್ರತಿರಕ್ಷಣ ವ್ಯವಸ್ಥೆಯನ್ನು ರೂಪಿಸಿದೆ. ಇಮ್ಯೂನ್ ಸಿಸ್ಟಂ ಎಂದು ಕರೆಯುವುದು ಇದನ್ನೇ. ರೋಗಕಾರಕದ ಸೋಂಕಿಗೆ ಒಳಗಾಗದ ಸ್ಥಿತಿಯನ್ನು ಇಮ್ಯೂನಿಟಿ (ರೋಗರಕ್ಷೆ) ಎಂದು ಕರೆಯುತ್ತಾರೆ.
 
-ಒಂದು ಗುಂಪಿನಲ್ಲಿರುವ ಎಲ್ಲರೂ ಸೋಂಕಿಗೆ ಒಳಗಾಗುವ ಸಾಧ್ಯತೆ ಇದ್ದಾಗ, ಆ ಸೋಂಕು ಒಬ್ಬ ರೋಗಿಯಿಂದ ಬೇರೆ ಎಷ್ಟು ಜನಕ್ಕೆ ನೇರವಾಗಿ ಹರಡಬಲ್ಲದು ಎನ್ನುವುದರ ಅಂದಾಜನ್ನು ಅದರ 'ಬೇಸಿಕ್ ರೀಪ್ರೊಡಕ್ಷನ್ ನಂಬರ್' (R0) ಸೂಚಿಸುತ್ತದೆ. ಈ ಸಂಖ್ಯೆ ಜಾಸ್ತಿಯಿದ್ದಷ್ಟೂ ರೋಗ ಹರಡುವ ಸಾಧ್ಯತೆ ಹೆಚ್ಚು.
+ವ್ಯಕ್ತಿಯೊಬ್ಬ ಆರೋಗ್ಯವಾಗಿದ್ದಾನೆ ಎಂದರೆ ಆತನ ಇಮ್ಯೂನಿಟಿ ಚೆನ್ನಾಗಿದೆಯೆಂದು ಅರ್ಥ. ಪ್ರತಿರಕ್ಷಣ ವ್ಯವಸ್ಥೆ ಸದೃಢವಾಗಿದ್ದ ಸಂದರ್ಭದಲ್ಲಿ ಅದೇ ಆತನ ಇಮ್ಯೂನಿಟಿ ಚೆನ್ನಾಗಿರುವಂತೆ ನೋಡಿಕೊಳ್ಳುತ್ತದೆ. ಇದು ಆಕ್ಟಿವ್ ಇಮ್ಯೂನಿಟಿ (ಸಕ್ರಿಯ ರೋಗರಕ್ಷೆ).
 
-ಕೆಲವೊಮ್ಮೆ, ಇಂತಹ ಎಲ್ಲ ಲೆಕ್ಕಾಚಾರಗಳನ್ನೂ ಮೀರಿ, ಒಬ್ಬನೇ ರೋಗಿ ದೊಡ್ಡ ಸಂಖ್ಯೆಯ ವ್ಯಕ್ತಿಗಳಿಗೆ ಸೋಂಕು ತಗುಲಿಸಿಬಿಡಬಹುದು. ಸಾಮಾನ್ಯಕ್ಕಿಂತ ಹೆಚ್ಚು ಪ್ರಮಾಣದಲ್ಲಿ ರೋಗದ ಸೋಂಕನ್ನು ಇತರರಿಗೆ ತಗುಲಿಸುವ ಇಂತಹ ರೋಗಿಗಳನ್ನು 'ಸೂಪರ್ ಸ್ಪ್ರೆಡರ್'ಗಳೆಂದು ಗುರುತಿಸಲಾಗುತ್ತದೆ. ಇವರನ್ನು ಕನ್ನಡದಲ್ಲಿ 'ಮಹಾ ಸೋಂಕಿಗ'ರೆಂದು ಕರೆಯಬಹುದು.
+ಹಾಗಿಲ್ಲದೆ ವ್ಯಕ್ತಿಯ ರೋಗರಕ್ಷೆ ದುರ್ಬಲವಾಗಿದ್ದಾಗ ಆತನಲ್ಲಿ ಸೋಂಕುಗಳನ್ನು ವಿರೋಧಿಸುವ ಶಕ್ತಿಯೂ ಕಡಿಮೆಯಾಗುತ್ತದೆ. ಇಮ್ಯೂನಿಟಿ (ರೋಗರಕ್ಷೆ) ಕಾಂಪ್ರಮೈಸ್ ಆಗಿರುವ (ಕುಂದಿರುವ) ಇಂತಹ ವ್ಯಕ್ತಿಗಳನ್ನು 'ಇಮ್ಯುನೋಕಾಂಪ್ರಮೈಸ್ಡ್' ಎಂದು ಗುರುತಿಸಲಾಗುತ್ತದೆ. 
 
-ಯಾವುದೋ ರೋಗ ಒಬ್ಬ ರೋಗಿಯಿಂದ ಸರಾಸರಿ ೨-೩ ವ್ಯಕ್ತಿಗಳಿಗೆ ಹರಡುತ್ತಿದೆ ಎಂದುಕೊಂಡರೆ, ಸೂಪರ್ ಸ್ಪ್ರೆಡರ್‌ಗಳು ಅದನ್ನು ಇನ್ನೂ ಹೆಚ್ಚಿನ ಜನಕ್ಕೆ ವರ್ಗಾಯಿಸಬಹುದು. ಬಹುಪಾಲು ಸನ್ನಿವೇಶಗಳಲ್ಲಿ, ತಾವು ಹೀಗೆ ಮಾಡುತ್ತಿದ್ದೇವೆ ಎನ್ನುವುದೇ ಅವರಿಗೆ ಗೊತ್ತಿರುವುದಿಲ್ಲ.
+ಈ ಹಿಂದಿನ ಅಸ್ವಸ್ಥತೆಯಿಂದಾಗಿ ಅಥವಾ ಅದಕ್ಕಾಗಿ ತೆಗೆದುಕೊಂಡ-ತೆಗೆದುಕೊಳ್ಳುತ್ತಿರುವ ಔಷಧೋಪಚಾರದಿಂದಾಗಿ ಈ ಪರಿಸ್ಥಿತಿ ಉಂಟಾಗುವುದು ಸಾಧ್ಯ. ಪ್ರತಿರಕ್ಷಣ ವ್ಯವಸ್ಥೆ ಪೂರ್ಣವಾಗಿ ಬೆಳೆದಿಲ್ಲದ ಮಕ್ಕಳಲ್ಲಿ ಅಥವಾ ವಯಸ್ಸಿನ ಕಾರಣದಿಂದ ಅದು ಸಹಜವಾಗಿ ಕುಂದಿರುವ ಹಿರಿಯರಲ್ಲೂ ರೋಗರಕ್ಷೆ ದುರ್ಬಲವಾಗಿರುತ್ತದೆ.
 
-ರೋಗಲಕ್ಷಣಗಳು ಕಾಣಿಸಿಕೊಂಡಿಲ್ಲದಿರುವುದು, ಹೆಚ್ಚು ಜನರ ಸಂಪರ್ಕಕ್ಕೆ ಬರುವುದು ಸೇರಿದಂತೆ ಸೋಂಕು ಹೆಚ್ಚು ಜನರಿಗೆ ವರ್ಗಾವಣೆಯಾಗಲು ಅನೇಕ ಕಾರಣಗಳಿರಬಹುದು. ಆದರೆ ಯಾವುದೇ ರೋಗಿ ಸೂಪರ್ ಸ್ಪ್ರೆಡರ್ ಆಗಲು ನಿಖರವಾದ ಕಾರಣಗಳೇನು ಎನ್ನುವುದು ಇನ್ನೂ ಸ್ಪಷ್ಟವಾಗಿಲ್ಲ. "೮೦% ಫಲಿತಾಂಶಗಳು ೨೦% ಕಾರಣಗಳಿಂದ ಬರುತ್ತವೆ" ಎನ್ನುವ ಗಣಿತ ಜಗತ್ತಿನ ೮೦-೨೦ ಸೂತ್ರವನ್ನು (ಪರೇಟೋ ಪ್ರಿನ್ಸಿಪಲ್) ಈ ಸನ್ನಿವೇಶಕ್ಕೂ ಅನ್ವಯಿಸಲು ಪ್ರಯತ್ನಿಸಲಾಗಿದೆಯಾದರೂ ಎಲ್ಲ ಉದಾಹರಣೆಗಳಿಗೂ ಅದು ಅನ್ವಯವಾಗುತ್ತದೆ ಎನ್ನುವಂತಿಲ್ಲ.
+ದೇಹದ ರಕ್ಷಣಾವ್ಯವಸ್ಥೆ ದುರ್ಬಲವಾಗಿರುವ ಈ ಪರಿಸ್ಥಿತಿಯಲ್ಲಿ ಕೋವಿಡ್-೧೯ ಸೇರಿದಂತೆ ಯಾವುದೇ ಸೋಂಕು ಇಂತಹ ವ್ಯಕ್ತಿಗಳನ್ನು ಸುಲಭವಾಗಿ ಬಾಧಿಸಬಹುದು. ರೋಗರಕ್ಷೆ ಯಾವ ಮಟ್ಟಕ್ಕೆ ಕುಂದಿದೆ ಎನ್ನುವುದನ್ನು ಅವಲಂಬಿಸಿ ಸೋಂಕಿನ ತೀವ್ರತೆಯಲ್ಲಿ ವ್ಯತ್ಯಾಸವಾಗುವುದು ಸಾಧ್ಯ. ಇಂತಹ ವ್ಯಕ್ತಿಗಳಲ್ಲಿ ಲಸಿಕೆಯೂ ಪರಿಣಾಮಕಾರಿಯಾಗಿ ಕೆಲಸ ಮಾಡಲಾರದು.
+
+ಹೀಗಾಗಿ ಇಮ್ಯುನೋಕಾಂಪ್ರಮೈಸ್ಡ್ ವ್ಯಕ್ತಿಗಳಲ್ಲಿ ರೋಗರಕ್ಷೆಯನ್ನು ವೃದ್ಧಿಸಲು ವೈದ್ಯರು ವಿಶೇಷ ಕ್ರಮಗಳನ್ನು ಅನುಸರಿಸುತ್ತಾರೆ. ಇತರರ ದೇಹದಲ್ಲಿ ರೂಪುಗೊಂಡ ಪ್ರತಿಕಾಯಗಳನ್ನು (ಆಂಟಿಬಾಡಿ) ರೋಗಿಯ ದೇಹಕ್ಕೆ ಸೇರಿಸುವುದು ಇಂತಹ ಕ್ರಮಗಳಲ್ಲೊಂದು. ಹೀಗೆ ಸೃಷ್ಟಿಯಾಗುವುದೇ ಪ್ಯಾಸಿವ್ ಇಮ್ಯೂನಿಟಿ (ನಿಷ್ಕ್ರಿಯ ರೋಗರಕ್ಷೆ). ಸದ್ಯ ಸುದ್ದಿಯಲ್ಲಿರುವ ಪ್ಲಾಸ್ಮಾ ಥೆರಪಿ ಇದಕ್ಕೊಂದು ಉದಾಹರಣೆ.
