--- a/content/coronalogy/02-vydya-vignanada-aaee/007.md
+++ b/content/coronalogy/02-vydya-vignanada-aaee/007.md
@@ -1,23 +1,27 @@
 ---
 weight: 7
-title: "ಹಾಟ್‌ಸ್ಪಾಟ್ ಅಂದರೇನು?"
+title: "SARI ಅಂದರೆ ಏನು?"
 #titleEnglish: ""
-titleKannada: "ಹಾಟ್‌ಸ್ಪಾಟ್ ಅಂದರೇನು?"
+titleKannada: "SARI ಅಂದರೆ ಏನು?"
 date: 2020-09-04T13:34:02+05:30
 author: "ಟಿ. ಜಿ. ಶ್ರೀನಿಧಿ"
 draft: true
 topic: "ಕೊರೋನಾಲಜಿ"
-collection: "ಪ್ರಾಥಮಿಕ ಪರಿಚಯ"
+collection: "ವೈದ್ಯವಿಜ್ಞಾನದ ಅಆಇಈ"
 image: "/images/coronalogy.jpg"
 #imageCreditsText: "Image from Wikimedia Commons"
 #knowMoreLink: "https://en.wikipedia.org/wiki/Fear_of_missing_out"
 
 ---
 
-ನಮ್ಮ ಮೊಬೈಲ್ ಫೋನಿನ ಅಂತರಜಾಲ ಸಂಪರ್ಕವನ್ನು ಇತರರೊಡನೆ ಹಂಚಿಕೊಳ್ಳಲು ಅದನ್ನು 'ಹಾಟ್‌ಸ್ಪಾಟ್' ಮಾಡಿಕೊಳ್ಳುವುದು ನಮಗೆ ಗೊತ್ತು. ಆದರೆ ಈ ಪದಕ್ಕೆ ಇನ್ನೂ ಒಂದು ಅರ್ಥ ಇದೆ: ಮಹತ್ವದ ಯಾವುದಾದರೂ ಘಟನೆ, ಅಪಾಯ ಅಥವಾ ಹಿಂಸಾಚಾರ ನಡೆದಿರುವ ಪ್ರದೇಶವನ್ನು  ಹಾಟ್‌ಸ್ಪಾಟ್ ಎಂದು ಕರೆಯುತ್ತಾರೆ. 
+ಕೋವಿಡ್-೧೯ ಜಾಗತಿಕ ಸೋಂಕಿನ ಸಂದರ್ಭದಲ್ಲಿ ಒಂದರ ಹಿಂದೆ ಒಂದರಂತೆ ಹೊಸ ಹೆಸರುಗಳು-ಪದಗಳು ನಮಗೆ ಕೇಳಲು ಸಿಗುತ್ತಿವೆ. ಇಂತಹ ಹೆಸರುಗಳಿಗೆ SARI ಒಂದು ಉದಾಹರಣೆ. 
 
-ಕೋವಿಡ್-೧೯ ಜಾಗತಿಕ ಸೋಂಕಿನ ಸಂದರ್ಭದಲ್ಲಿ, ಆ ರೋಗ ಕಾಣಿಸಿಕೊಂಡಿರುವ ಅಥವಾ ಹರಡುತ್ತಿರುವ ಪ್ರದೇಶಗಳನ್ನು 'ಹಾಟ್‌ಸ್ಪಾಟ್' ಎಂಬ ಹೆಸರಿನಿಂದ ಗುರುತಿಸಲಾಗುತ್ತಿದೆ. 
+SARI ಎನ್ನುವುದು 'ಸಿವಿಯರ್ ಅಕ್ಯೂಟ್ ರೆಸ್ಪಿರೇಟರಿ ಇನ್‌ಫೆಕ್ಷನ್' ಎಂಬ ಹೆಸರಿನ ಸಂಕ್ಷಿಪ್ತ ರೂಪ. ಹೆಸರೇ ಹೇಳುವಂತೆ ಇದು ಉಸಿರಾಟಕ್ಕೆ ತೊಂದರೆಮಾಡುವ ಗಂಭೀರ ಸೋಂಕು. ಹಲವು ಕೋವಿಡ್-೧೯ ಸೋಂಕಿತರ ಸಾವಿಗೆ ಕಾರಣವಾಗಿರುವ ಅಪಖ್ಯಾತಿಯೂ ಈ ಸೋಂಕಿಗೆ ಇದೆ.
 
-ಹೀಗೆ ರೋಗ ಕಾಣಿಸಿಕೊಂಡಿರುವ ಪ್ರದೇಶದ ಆಸುಪಾಸಿನಲ್ಲಿ ಅದು ಹರಡದಂತೆ ಕಟ್ಟುನಿಟ್ಟಿನ ಕ್ರಮಗಳನ್ನು ಕೈಗೊಳ್ಳಬೇಕಾಗುತ್ತದೆ. ಇದಕ್ಕಾಗಿ, ಕೋವಿಡ್-೧೯ ರೋಗಿಗಳು ಕಂಡುಬಂದಿರುವ ಸ್ಥಳದ ಸುತ್ತಲಿನ ನಿರ್ದಿಷ್ಟ ಪ್ರದೇಶವನ್ನು 'ಕಂಟೈನ್‌ಮೆಂಟ್ ಜ಼ೋನ್' (ನಿಯಂತ್ರಿತ ವಲಯ) ಎಂದು ಪರಿಗಣಿಸಲಾಗುತ್ತದೆ. ರೋಗಪೀಡಿತರು ಎಲ್ಲಿ ಪತ್ತೆಯಾಗಿದ್ದಾರೆ (ಅಪಾರ್ಟ್‌ಮೆಂಟ್, ಪ್ರತ್ಯೇಕ ಮನೆ, ಕೊಳೆಗೇರಿ ಇತ್ಯಾದಿ) ಎನ್ನುವುದರ ಆಧಾರದ ಮೇಲೆ ಈ ವಲಯದ ವಿಸ್ತೀರ್ಣವನ್ನು ನಿಗದಿಪಡಿಸಲಾಗುತ್ತದೆ. ಇಂತಹ ಪ್ರದೇಶಗಳಲ್ಲಿ ಜನರು ಮನೆಯಿಂದ ಹೊರಬರಲು, ವಾಹನಗಳು ಓಡಾಡಲು ಅವಕಾಶ ಇರುವುದಿಲ್ಲ. 'ಸೀಲ್ ಡೌನ್' ಎಂದು ಕರೆಯಲಾಗುತ್ತಿರುವ ಪರಿಸ್ಥಿತಿ ಇಂತಹ ವಲಯಗಳಿಗೆ ಅನ್ವಯವಾಗುತ್ತದೆ. 
+ಜ್ವರ, ಒಣಕೆಮ್ಮು, ಮೈಕೈ ನೋವು ಮುಂತಾದ ಸಾಮಾನ್ಯ ರೋಗಲಕ್ಷಣಗಳು ಅನೇಕ ಬೇರೆಬೇರೆ ಕಾಯಿಲೆಗಳನ್ನು ಸೂಚಿಸಬಹುದು. ಹೀಗಾಗಿಯೇ ಇಂತಹ ರೋಗಲಕ್ಷಣಗಳು ಕಾಣಿಸಿಕೊಂಡಾಗ ಅಂತಹ ರೋಗಿಗೆ 'ಇನ್‌ಫ್ಲುಯೆಂಜ಼ಾದಂತಹ ಕಾಯಿಲೆ' (ಇನ್‌ಫ್ಲುಯೆಂಜ಼ಾ-ಲೈಕ್ ಇಲ್‌ನೆಸ್, ILI) ಇದೆ ಎನ್ನಲಾಗುತ್ತದೆ. ಈ ಕಾಯಿಲೆ ಸಾಮಾನ್ಯ ನೆಗಡಿ ಆಗಿರಬಹುದು, ಅಥವಾ ಇನ್‌ಫ್ಲುಯೆಂಜ಼ಾ ಕೂಡ ಆಗಿರಬಹುದು.
 
-ನಿಯಂತ್ರಿತ ವಲಯದ ಸುತ್ತ ಇರುವ ಪ್ರದೇಶದಲ್ಲೂ ರೋಗ ಹರಡದಂತೆ ನಿಗಾ ವಹಿಸುವುದು ಅನಿವಾರ್ಯ. ಇದಕ್ಕಾಗಿ ಅದರ ಸುತ್ತಲಿನ ನಿರ್ದಿಷ್ಟ ವಿಸ್ತೀರ್ಣದ ಪ್ರದೇಶವನ್ನು 'ಬಫರ್ ಜ಼ೋನ್' ಎಂದು ಗುರುತಿಸಲಾಗುತ್ತದೆ. ಕೋವಿಡ್-೧೯ ಸೋಂಕು ಹರಡದಂತೆ ತಡೆಯಲು ಈ ಪ್ರದೇಶದಲ್ಲಿ ಕಣ್ಗಾವಲು ಮತ್ತು ಸಾಮಾಜಿಕ ಅಂತರದ ಕ್ರಮಗಳು ಸದಾ ಜಾರಿಯಲ್ಲಿರಬೇಕು. ಕಂಟೈನ್‌ಮೆಂಟ್ ಜ಼ೋನ್‌ಗೆ ಹೊಂದಿಕೊಂಡಂತಿರುವ ಬಫರ್ ಜ಼ೋನ್‌ನ ಭಾಗದಲ್ಲಿ (ಒಂದು ಕಿಮೀ ವ್ಯಾಪ್ತಿ) ಪ್ರತಿ ಮನೆಯಲ್ಲೂ ತಪಾಸಣೆ ನಡೆಸಬೇಕಾಗುತ್ತದೆ ಎಂದು ಸರಕಾರ ಹೇಳುತ್ತದೆ.
+ILIಯ ರೋಗಲಕ್ಷಣಗಳ ಜೊತೆಗೆ ಉಸಿರಾಟದ ತೀವ್ರ ತೊಂದರೆಯೂ ಇದ್ದು, ರೋಗಿಯ ಉಸಿರಾಟ ಮುಂದುವರೆಸಲು ವೈದ್ಯಕೀಯ ನೆರವು ಪಡೆಯಬೇಕಾದ ಪರಿಸ್ಥಿತಿ ಸೃಷ್ಟಿಯಾದರೆ ಆಗ ಅದನ್ನು SARI ಎಂದು  ಗುರುತಿಸಲಾಗುತ್ತದೆ. ಇನ್ನಿತರ ರೋಗಗಳಂತೆ ನಿಧಾನವಾಗಿ ಏರದೆ ತೀವ್ರಗತಿಯಲ್ಲಿ ವಿಷಮಿಸುವ ಅನಿಯಂತ್ರಿತ ಪರಿಸ್ಥಿತಿ ಇದು.
+
+ಇಂತಹ ರೋಗಿಗಳ ಶುಶ್ರೂಷೆಯಲ್ಲಿ ಔಷಧೋಪಚಾರದ ಜೊತೆ ವೆಂಟಿಲೇಟರ್‌ನಂತಹ ಬಾಹ್ಯ ಸಾಧನಗಳನ್ನೂ ಬಳಸಲಾಗುತ್ತದೆ. ರೋಗರಕ್ಷೆ ದುರ್ಬಲವಾಗಿರುವ ಅಥವಾ ಸೂಕ್ತ ವೈದ್ಯಕೀಯ ನೆರವು ದೊರಕುವುದು ತಡವಾದ ಸಂದರ್ಭಗಳಲ್ಲಿ SARIಯಿಂದ ಸಾವು ಕೂಡ ಸಂಭವಿಸಬಹುದು. 
+
+ಇನ್‌ಫ್ಲುಯೆಂಜ಼ಾ-ಲೈಕ್ ಇಲ್‌ನೆಸ್ ಹಾಗೂ ಸಿವಿಯರ್ ಅಕ್ಯೂಟ್ ರೆಸ್ಪಿರೇಟರಿ ಇನ್‌ಫೆಕ್ಷನ್‌ಗಳಿಗೆ ಅನೇಕ ಕಾರಣಗಳಿರುವುದು ಸಾಧ್ಯ. ಇಂತಹ ಕಾರಣಗಳಲ್ಲಿ ಕೋವಿಡ್-೧೯ ಕೂಡ ಒಂದು. ಕೋವಿಡ್-೧೯ ಬಾಧಿತರೆಲ್ಲರಲ್ಲೂ SARI ಕಾಣಿಸಿಕೊಳ್ಳಬೇಕೆಂದಾಗಲೀ, SARI ಕಾಣಿಸಿಕೊಂಡಿರುವ ರೋಗಿಗಳಿಗೆಲ್ಲ ಕೋವಿಡ್-೧೯ ಬಂದಿರಬೇಕೆಂದಾಗಲೀ ಇಲ್ಲ.
