--- a/content/coronalogy/02-vydya-vignanada-aaee/008.md
+++ b/content/coronalogy/02-vydya-vignanada-aaee/008.md
@@ -1,25 +1,25 @@
 ---
 weight: 8
-title: "ಕಮ್ಯೂನಿಟಿ ಟ್ರಾನ್ಸ್‌ಮಿಶನ್ ಅಂದರೇನು?"
+title: "ರೋಗಲಕ್ಷಣ ಇಲ್ಲದ ರೋಗಿಗಳು!"
 #titleEnglish: ""
-titleKannada: "ಕಮ್ಯೂನಿಟಿ ಟ್ರಾನ್ಸ್‌ಮಿಶನ್ ಅಂದರೇನು?"
+titleKannada: "ರೋಗಲಕ್ಷಣ ಇಲ್ಲದ ರೋಗಿಗಳು!"
 date: 2020-09-04T13:34:02+05:30
 author: "ಟಿ. ಜಿ. ಶ್ರೀನಿಧಿ"
 draft: true
 topic: "ಕೊರೋನಾಲಜಿ"
-collection: "ಪ್ರಾಥಮಿಕ ಪರಿಚಯ"
+collection: "ವೈದ್ಯವಿಜ್ಞಾನದ ಅಆಇಈ"
 image: "/images/coronalogy.jpg"
 #imageCreditsText: "Image from Wikimedia Commons"
 #knowMoreLink: "https://en.wikipedia.org/wiki/Fear_of_missing_out"
 
 ---
 
-ಕೋವಿಡ್-೧೯ ಸೋಂಕಿತರು ಕೆಮ್ಮಿದಾಗ ಅಥವಾ ಸೀನಿದಾಗ ಅವರ ಮೂಗು-ಬಾಯಿಗಳಿಂದ ಹೊರಬರುವ ಸಣ್ಣ ಹನಿಗಳಲ್ಲಿ ಕೊರೊನಾವೈರಸ್ ಇರಬಹುದು, ಮತ್ತು ನಮ್ಮ ಸಂಪರ್ಕಕ್ಕೆ ಬಂದಾಗ ಅದು ನಮ್ಮಲ್ಲೂ ರೋಗವನ್ನು ಉಂಟುಮಾಡಬಲ್ಲದು. ಹತ್ತಿರ ನಿಂತು ಮಾತನಾಡುವಾಗಲೂ ಹೀಗೆ ರೋಗ ಹರಡುವುದು ಸಾಧ್ಯ ಎನ್ನಲಾಗಿದೆ.
+ಜ್ವರ ಬಂದಿರಬಹುದು ಅನ್ನಿಸಿದಾಗ ಹಣೆ ಮುಟ್ಟಿ ನೋಡುವುದು ನಮ್ಮಲ್ಲಿ ಅನೇಕರ ಅಭ್ಯಾಸ. ಹಣೆ ಬೆಚ್ಚಗಿರುವುದು ಜ್ವರದ ರೋಗಲಕ್ಷಣ ಅಥವಾ 'ಸಿಂಪ್ಟಮ್'. ಇದೇ ರೀತಿ ಜ್ವರ, ಸುಸ್ತು ಹಾಗೂ ಒಣ ಕೆಮ್ಮು ಕೋವಿಡ್-೧೯ರ ಸಾಮಾನ್ಯ ರೋಗಲಕ್ಷಣಗಳು.
 
-ಹೀಗೆ ಯಾವುದೋ ಒಂದು ಮಾರ್ಗದಲ್ಲಿ ರೋಗ ಒಬ್ಬರಿಂದ ಮತ್ತೊಬ್ಬರಿಗೆ ಹರಡಿದ್ದು ಪತ್ತೆಯಾದಾಗ, ವೈದ್ಯರು ಮತ್ತು ಅಧಿಕಾರಿಗಳು ಅದು ಯಾರಿಂದ ಬಂದಿರಬಹುದು ಎಂದು ಪತ್ತೆಮಾಡಲು ಪ್ರಯತ್ನಿಸುತ್ತಾರೆ. 'ಕಾಂಟ್ಯಾಕ್ಟ್ ಟ್ರೇಸಿಂಗ್' ಪ್ರಕ್ರಿಯೆಯ ಮೂಲಕ ಸೋಂಕಿತರ ಸಂಪರ್ಕಕ್ಕೆ ಬಂದಿರುವ ಎಲ್ಲರನ್ನೂ ಗುರುತಿಸಿ ಅವರ ಆರೋಗ್ಯದ ಮೇಲೆ ನಿಗಾ ಇಡುತ್ತಾರೆ. 
+ಯಾವುದೇ ವ್ಯಕ್ತಿಯಲ್ಲಿ ರೋಗದ ಲಕ್ಷಣಗಳು ಕಾಣಿಸಿಕೊಂಡರೆ ಆತನನ್ನು 'ಸಿಂಪ್ಟಮ್ಯಾಟಿಕ್' (ರೋಗಲಕ್ಷಣ ಪ್ರದರ್ಶಿಸುವ) ರೋಗಿಯೆಂದು ಗುರುತಿಸಲಾಗುತ್ತದೆ. ಇಂತಹವರಿಗೆ ಸೂಕ್ತ ಚಿಕಿತ್ಸೆ ನೀಡಲು ಅವರಲ್ಲಿ ಕಾಣಸಿಗುವ ರೋಗಲಕ್ಷಣಗಳು ವೈದ್ಯರಿಗೆ ನೆರವಾಗುತ್ತವೆ. ಇಂತಹ ವ್ಯಕ್ತಿಗಳಿಂದ ಇತರರಿಗೆ ರೋಗದ ಸೋಂಕು ಹರಡಿದರೆ ಅದನ್ನು 'ಸಿಂಪ್ಟಮ್ಯಾಟಿಕ್ ಟ್ರಾನ್ಸ್‌ಮಿಶನ್' ಎಂದು ಗುರುತಿಸಲಾಗುತ್ತದೆ.
 
-ಕೋವಿಡ್-೧೯ ಸೋಂಕಿತರು ಹಾಗೂ ಶಂಕಿತರನ್ನು ಸಾಧ್ಯವಾದಷ್ಟೂ ಬೇಗ ಗುರುತಿಸುವ ಮೂಲಕ ರೋಗ ಹರಡುವುದನ್ನು ನಿಧಾನಿಸುವುದು ಈ ಪ್ರಕ್ರಿಯೆಯ ಉದ್ದೇಶ. ಸೋಂಕು ಎಲ್ಲಿಂದ ಬಂತೆಂದು ಪತ್ತೆಮಾಡಲು ಸಾಧ್ಯವಾದರೆ ಈ ಎಲ್ಲರನ್ನೂ ಬೇರ್ಪಡಿಸುವುದು, ಸೂಕ್ತ ಚಿಕಿತ್ಸೆ ನೀಡುವುದು, ಹಾಗೂ ಆ ಮೂಲಕ ಸೋಂಕಿನ ಸರಪಳಿಯನ್ನು ಮುರಿಯುವುದು ಸಾಧ್ಯವಾಗುತ್ತದೆ.
+ಸೋಂಕಿನಿಂದ ಬಾಧಿತರಾದರೂ ಕೆಲವು ರೋಗಿಗಳಲ್ಲಿ ಯಾವ ರೋಗಲಕ್ಷಣವೂ ಕಾಣಿಸದಿರಬಹುದು. ಇಂತಹ 'ಎಸಿಂಪ್ಟಮ್ಯಾಟಿಕ್' (ರೋಗಲಕ್ಷಣ ಪ್ರದರ್ಶಿಸದ) ರೋಗಿಗಳಿಗೆ ಸೋಂಕು ತಗುಲಿರುವ ವಿಷಯ ತಿಳಿಯುವುದು ಪ್ರಯೋಗಾಲಯದಲ್ಲಿ ಪರೀಕ್ಷೆಗೆ ಒಳಪಟ್ಟಾಗ ಮಾತ್ರವೇ. ಅಕಸ್ಮಾತ್ ಇಂತಹ ವ್ಯಕ್ತಿಗಳಿಂದಲೂ ಇತರರಿಗೆ ಸೋಂಕು ಹರಡಿದರೆ, ಅಂತಹ ಪ್ರಸಾರಣೆಯನ್ನು 'ಎಸಿಂಪ್ಟಮ್ಯಾಟಿಕ್ ಟ್ರಾನ್ಸ್‌ಮಿಶನ್' ಎಂದು ಕರೆಯುತ್ತಾರೆ.
 
-ಒಂದುವೇಳೆ ಸೋಂಕು ಇಡೀ ಸಮುದಾಯದಲ್ಲಿ ಹರಡಿ, ಯಾರಿಗೆ ಯಾರಿಂದ ಸೋಂಕು ತಗುಲಿದೆಯೆಂದು ಗುರುತಿಸಲು ಸಾಧ್ಯವಾಗದಿದ್ದರೆ  ರೋಗ ಬಹಳ ಕ್ಷಿಪ್ರವಾಗಿ ಹರಡುವುದು ಸಾಧ್ಯ. ಅಂತಹ ಪರಿಸ್ಥಿತಿಯಲ್ಲಿ ಸೋಂಕಿತರ ನೇರ ಸಂಪರ್ಕಕ್ಕೆ ಬಂದಿಲ್ಲವೆಂದು ಭಾವಿಸುವವರಲ್ಲೂ ಸೋಂಕು ಕಾಣಿಸಿಕೊಳ್ಳುತ್ತದೆ, ಅವರಿಂದ ಅದು ಇನ್ನಷ್ಟು ಜನಕ್ಕೆ ಹರಡುತ್ತದೆ, ವೈದ್ಯಕೀಯ ವ್ಯವಸ್ಥೆಯ ಮೇಲೆ ಒತ್ತಡ ಹೆಚ್ಚುತ್ತದೆ ಹಾಗೂ ಒಟ್ಟಾರೆಯಾಗಿ ಪರಿಸ್ಥಿತಿಯನ್ನು ನಿಭಾಯಿಸುವುದು ಕಷ್ಟವಾಗುತ್ತದೆ. 
+ಅಂದಹಾಗೆ ಸೋಂಕು ತಗುಲಿದ ನಂತರ ರೋಗದ ಲಕ್ಷಣಗಳು ಕಾಣಿಸಿಕೊಳ್ಳಲು ಕೊಂಚ ಸಮಯ ಬೇಕಾಗಬಹುದು. ಈ ಸಮಯದಲ್ಲೂ ಸೋಂಕು ಇತರರಿಗೆ ಹರಡುವುದು ಸಾಧ್ಯ. ಇದಕ್ಕೆ 'ಪ್ರಿ-ಸಿಂಪ್ಟಮ್ಯಾಟಿಕ್ ಟ್ರಾನ್ಸ್‌ಮಿಶನ್' ಎಂದು ಹೆಸರು. 
 
-ಈ ಆತಂಕಕಾರಿ ಪರಿಸ್ಥಿತಿಯನ್ನು ಸಮುದಾಯ ಪ್ರಸಾರಣೆ, ಅಥವಾ 'ಕಮ್ಯೂನಿಟಿ ಟ್ರಾನ್ಸ್‌ಮಿಶನ್' ಎಂದು ಗುರುತಿಸಲಾಗುತ್ತದೆ. ಇದು ಕೋವಿಡ್-೧೯ ಕಾಯಿಲೆ ಹರಡುವಿಕೆಯ ಮೂರನೇ ಹಂತ.
+ಕೋವಿಡ್-೧೯ ಸೋಂಕು ತಗುಲಿದ ನಂತರ ರೋಗಲಕ್ಷಣಗಳು ಕಾಣಿಸಿಕೊಳ್ಳಲು ೧ರಿಂದ ೧೪ ದಿನಗಳ ಅವಧಿ ಬೇಕಾಗಬಹುದು (ಸರಾಸರಿ ೫-೬ ದಿನಗಳು) ಎಂದು ವಿಶ್ವ ಆರೋಗ್ಯ ಸಂಸ್ಥೆ ಹೇಳಿದೆ. ಹಲವು ಸನ್ನಿವೇಶಗಳಲ್ಲಿ ಲಕ್ಷಣಗಳು ಕಾಣಿಸಿಕೊಳ್ಳುವ ಮುನ್ನವೇ ರೋಗಪತ್ತೆ ಪರೀಕ್ಷೆಯಿಂದ ಸೋಂಕನ್ನು ಪತ್ತೆಹಚ್ಚಲಾಗಿದೆ. ಕೆಮ್ಮು - ಸೀನು ಮುಂತಾದ ರೋಗಲಕ್ಷಣಗಳು ಇಲ್ಲದ ಎಸಿಂಪ್ಟಮ್ಯಾಟಿಕ್ ರೋಗಿಗಳಿಂದ ಕೊರೊನಾವೈರಸ್ ಹರಡುವ ಸಾಧ್ಯತೆ ತೀರಾ ಕಡಿಮೆ.
