--- a/content/coronalogy/02-vydya-vignanada-aaee/009.md
+++ b/content/coronalogy/02-vydya-vignanada-aaee/009.md
@@ -1,27 +1,23 @@
 ---
 weight: 9
-title: "ಕೋವಿಡ್-೧೯ ಹರಡುವಿಕೆಯ ನಾಲ್ಕು ಹಂತಗಳು"
+title: "ಪ್ರತಿಕಾಯ ಅಂದರೇನು?"
 #titleEnglish: ""
-titleKannada: "ಕೋವಿಡ್-೧೯ ಹರಡುವಿಕೆಯ ನಾಲ್ಕು ಹಂತಗಳು"
+titleKannada: "ಪ್ರತಿಕಾಯ ಅಂದರೇನು?"
 date: 2020-09-04T13:34:02+05:30
 author: "ಟಿ. ಜಿ. ಶ್ರೀನಿಧಿ"
 draft: true
 topic: "ಕೊರೋನಾಲಜಿ"
-collection: "ಪ್ರಾಥಮಿಕ ಪರಿಚಯ"
+collection: "ವೈದ್ಯವಿಜ್ಞಾನದ ಅಆಇಈ"
 image: "/images/coronalogy.jpg"
 #imageCreditsText: "Image from Wikimedia Commons"
 #knowMoreLink: "https://en.wikipedia.org/wiki/Fear_of_missing_out"
 
 ---
 
-ಕೋವಿಡ್-೧೯ ಹರಡುವಿಕೆಯ ಹಂತಗಳ ಬಗ್ಗೆ ನಾವು ಆಗಿಂದಾಗ್ಗೆ ಕೇಳುತ್ತಿದ್ದೇವೆ. ಇಂತಹ ಪ್ರತಿಯೊಂದು ಹಂತವೂ ಅದರ ಪ್ರಸಾರಣೆಯನ್ನು ಕುರಿತ ನಿರ್ದಿಷ್ಟ ಪರಿಸ್ಥಿತಿಯನ್ನು ಸೂಚಿಸುತ್ತದೆ. 
+ನಮ್ಮಲ್ಲಿ ರೋಗಗಳನ್ನು ಉಂಟುಮಾಡುವ ವೈರಸ್, ಬ್ಯಾಕ್ಟೀರಿಯಾ ಮುಂತಾದ ರೋಗಕಾರಕಗಳಲ್ಲಿ (ಪ್ಯಾಥೋಜೆನ್) 'ಪ್ರತಿಜನಕ'ವೆಂಬ (ಆಂಟಿಜೆನ್) ಭಾಗವೂ ಇರುತ್ತದೆ. ರೋಗಕಾರಕವನ್ನು ನಮ್ಮ ದೇಹದ ಮೇಲೆ ದಾಳಿ ನಡೆಸುತ್ತಿರುವ ಶತ್ರುಸೈನಿಕ ಎಂದುಕೊಂಡರೆ, ಪ್ರತಿಜನಕವು ಆತನ ಸಮವಸ್ತ್ರ ಇದ್ದಹಾಗೆ. ಬೇರೆಬೇರೆ ದೇಶದ ಸೈನಿಕರಿಗೆ ಬೇರೆಬೇರೆ ಸಮವಸ್ತ್ರ ಇದ್ದಹಾಗೆ ಬೇರೆಬೇರೆ ರೋಗಕಾರಕಗಳಲ್ಲಿ ಬೇರೆಬೇರೆ ಪ್ರತಿಜನಕ ಇರುತ್ತದೆ. 
 
-ಒಂದು ಪ್ರದೇಶದಲ್ಲಿ ರೋಗ ಮೊದಲಿಗೆ ಕಾಣಿಸಿಕೊಳ್ಳುವುದು ಮೊದಲ ಹಂತ. ಈ ಹಂತದಲ್ಲಿ ಆ ಪ್ರದೇಶದಲ್ಲಿರುವ ಜನರಲ್ಲಿ, ಅಥವಾ ಅಲ್ಲಿಗೆ ಹೋಗಿ ಬಂದವರಲ್ಲಿ ಮಾತ್ರ ರೋಗ ಕಾಣಿಸಿಕೊಳ್ಳುವುದು ಸಾಧ್ಯ.
+ರೋಗಕಾರಕದ ದಾಳಿ ನಡೆದಾಗ ಅವುಗಳ ವಿರುದ್ಧ ಹೋರಾಡುವುದು, ಸೋಂಕು ತಗಲದಂತೆ ನೋಡಿಕೊಳ್ಳುವುದು ನಮ್ಮ ದೇಹದ ಪ್ರತಿರಕ್ಷಣ ವ್ಯವಸ್ಥೆಯ (ಇಮ್ಯೂನ್ ಸಿಸ್ಟಂ) ಕೆಲಸ. ರೋಗಕಾರಕದಲ್ಲಿರುವ ಪ್ರತಿಜನಕವನ್ನು ಗುರುತಿಸುವ ಮೂಲಕ ದಾಳಿ ಮಾಡಿರುವುದು ಯಾವ ರೋಗಕಾರಕವೆಂದು ಪತ್ತೆಮಾಡುವ ಈ ವ್ಯವಸ್ಥೆ, ಅದಕ್ಕೆ ತಕ್ಕುದಾದ ದೇಹರಕ್ಷಕ ಪದಾರ್ಥವನ್ನು ಉತ್ಪಾದಿಸುತ್ತದೆ. ಇದೇ ಪ್ರತಿಕಾಯ (ಆಂಟಿಬಾಡಿ). ಇದು ನಿರ್ದಿಷ್ಟ ರೋಗಕಾರಕದ ವಿರುದ್ಧ ಆಯುಧದಂತೆ ಕೆಲಸ ಮಾಡುತ್ತದೆ.
 
-ರೋಗಪೀಡಿತರ ಆಸುಪಾಸಿನಲ್ಲಿ ರೋಗ ಒಬ್ಬರಿಂದ ಒಬ್ಬರಿಗೆ ಹರಡಲು ಶುರುವಾಗುವುದು ಎರಡನೇ ಹಂತ. ಇದನ್ನು ಸ್ಥಳೀಯ ಪ್ರಸಾರಣೆ (ಲೋಕಲ್ ಟ್ರಾನ್ಸ್‌ಮಿಶನ್) ಎಂದು ಕರೆಯುತ್ತಾರೆ. ಈ ಹಂತದಲ್ಲಿ ರೋಗಪೀಡಿತರಿಗೆ ಸೋಂಕು ಎಲ್ಲಿಂದ ಬಂತು ಎನ್ನುವುದನ್ನು ಪತ್ತೆಮಾಡುವುದು, ನಿಯಂತ್ರಣ ಕ್ರಮಗಳನ್ನು ಕೈಗೊಳ್ಳುವುದು ಸಾಧ್ಯ.
+ಎಲ್ಲರ ದೇಹದ ಪ್ರತಿರಕ್ಷಣ ವ್ಯವಸ್ಥೆಯೂ ಒಂದೇ ರೀತಿ ಇರುವುದಿಲ್ಲ. ಈ ವ್ಯವಸ್ಥೆ ಸದೃಢವಾಗಿರುವವರಲ್ಲಿ ರೋಗನಿರೋಧಕ ಶಕ್ತಿ ಹೆಚ್ಚಿರುತ್ತದೆ. ಪ್ರತಿರಕ್ಷಣ ವ್ಯವಸ್ಥೆ ಕುಂಠಿತವಾಗಿರುವವರಿಗೆ ಸೋಂಕು ತಗಲುವ ಸಾಧ್ಯತೆ ಹೆಚ್ಚು. 
 
-ಸೋಂಕು ಇಡೀ ಸಮುದಾಯದಲ್ಲಿ ಹರಡಿ, ಯಾರಿಗೆ ಯಾರಿಂದ ಸೋಂಕು ತಗುಲಿದೆಯೆಂದು ಗುರುತಿಸಲು ಸಾಧ್ಯವಾಗದಿರುವುದು ಮೂರನೆಯ ಹಂತ. ಇದನ್ನು  ಸಮುದಾಯ ಪ್ರಸಾರಣೆ (ಕಮ್ಯೂನಿಟಿ ಟ್ರಾನ್ಸ್‌ಮಿಶನ್) ಎನ್ನುತ್ತಾರೆ. ಈ ಹಂತದಲ್ಲಿ ರೋಗ ಬಹಳ ಕ್ಷಿಪ್ರವಾಗಿ ಹರಡುತ್ತದೆ ಹಾಗೂ ವೈದ್ಯಕೀಯ ವ್ಯವಸ್ಥೆಯ ಮೇಲೆ ವಿಪರೀತ ಒತ್ತಡಕ್ಕೆ ಕಾರಣವಾಗುತ್ತದೆ.
-
-ಪರಿಸ್ಥಿತಿ ಕೈಮೀರಿ, ರೋಗ ದೇಶವ್ಯಾಪಿಯಾಗಿ ಹರಡಿಬಿಡುವುದು ನಾಲ್ಕನೆಯ ಹಾಗೂ ಅಂತಿಮ ಹಂತ. ಈ ಹಂತದಲ್ಲಿ ರೋಗದ ನಿಯಂತ್ರಣ ಸಾಧ್ಯವೇ ಇಲ್ಲವೆನ್ನುವಷ್ಟು ಕಠಿಣವಾಗಿಬಿಡುತ್ತದೆ. ಚೀನಾದಲ್ಲಿದ್ದ ಪರಿಸ್ಥಿತಿ, ಇದಕ್ಕೊಂದು ಉದಾಹರಣೆ.
-
-ಇಟಲಿ, ಸ್ಪೇನ್ ಮುಂತಾದ ದೇಶಗಳು ಈಗಾಗಲೇ ಮೂರನೆಯ ಹಂತವನ್ನು ತಲುಪಿವೆ. ಭಾರತದ ಬಹುತೇಕ ಭಾಗಗಳು ಸದ್ಯ ಎರಡನೇ ಹಂತದಲ್ಲಿವೆಯಾದರೂ ಕೆಲವು ಪ್ರದೇಶಗಳಲ್ಲಿ ಸಮುದಾಯ ಪ್ರಸಾರಣೆಯನ್ನು ಕೂಡ ಗುರುತಿಸಲಾಗಿದೆ. ಹೀಗಾಗಿ ಭಾರತದ ಒಟ್ಟಾರೆ ಪರಿಸ್ಥಿತಿ (೨೦೨೦ರ ಏಪ್ರಿಲ್ ಮೊದಲ ವಾರದಲ್ಲಿ) ಎರಡು ಹಾಗೂ ಮೂರನೆಯ ಹಂತದ ನಡುವೆ ಇದೆ ಎಂದು ಕೇಂದ್ರ ಆರೋಗ್ಯ ಇಲಾಖೆ ಹೇಳಿದೆ. 
+ಸಾಮಾನ್ಯವಾಗಿ ಪ್ರತಿರಕ್ಷಣ ವ್ಯವಸ್ಥೆಯು ಬೇರೆಬೇರೆ ರೋಗಕಾರಕಗಳ ವಿರುದ್ಧ ನಡೆಸಿದ ಹೋರಾಟವನ್ನು ನೆನಪಿಟ್ಟುಕೊಂಡಿರುತ್ತದೆ, ಮತ್ತು ಅದೇ ರೋಗಕಾರಕ ಇನ್ನೊಮ್ಮೆ ದಾಳಿ ಮಾಡಿದಾಗ ಬೇಗನೆ ಪ್ರತಿದಾಳಿ ನಡೆಸುತ್ತದೆ. ಆದರೆ ಪ್ರತಿಯೊಂದು ರೋಗಕಾರಕದ ಪ್ರತಿಜನಕವೂ ವಿಭಿನ್ನವಾಗಿರುವುದರಿಂದ, ಒಂದು ರೋಗಕಾರಕದ ವಿರುದ್ಧವಾಗಿ ಉತ್ಪತ್ತಿಯಾದ ಪ್ರತಿಕಾಯ ಮತ್ತೊಂದರ ವಿರುದ್ಧ ಪ್ರಯೋಜನಕ್ಕೆ ಬರುವುದಿಲ್ಲ. ಹೀಗಾಗಿ, ಹೊಸ ರೋಗಕಾರಕಗಳು ಕಾಣಿಸಿಕೊಂಡಾಗ ಅವುಗಳನ್ನು ಯಶಸ್ವಿಯಾಗಿ ವಿರೋಧಿಸುವ ಶಕ್ತಿ ಬೆಳೆಸಿಕೊಳ್ಳಲು ಹೆಚ್ಚಿನ ಸಮಯ ಬೇಕಾಗುತ್ತದೆ. ಕೋವಿಡ್-೧೯ ರೋಗಕ್ಕೆ ಕಾರಣವಾದ ಕೊರೊನಾವೈರಸ್ ವಿಷಯದಲ್ಲಿ ಆಗುತ್ತಿರುವುದು ಇದೇ.
